--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 # .streamlit/secrets.toml
 [api_keys]
 # Store the keys under a simple identifier
-openai = "sk-..."
-google = "AIza..."
-grok = "grok_sk-..."    `
+openai = 
+google = 
+grok = 
