--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 # .streamlit/secrets.toml
-[api_keys]
+#[api_keys]
 # Store the keys under a simple identifier
-openai = 
-google = 
-grok = 
+#openai = 
+#google = 
+#grok = 
